--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 						</div> 
 						<h3 class="service-title">Development</h3>
 						<p class="service-description">
-              HTML, CSS, JavaScrip, Markdown</p>
+              HTML, CSS, JavaScript, Markdown</p>
 					</div> 
 					<div class="service-hover"></div>
 				</div>
